@@ -3,6 +3,7 @@
 javanvm/atari_javanvm.c, pokeysnd.c, sound.h, ui.c, win32/sound.c:
 add support for stereo, new sound.h function Sound_Reint on some platforms,
 fixes to sdl sound, minor fixes.
+* win32/sound.c: fix STEREO_SOUND undefined
 
 
 2008-06-29  Perry McFarlane  <perry_m@fastmail.fm>
